--- a/CompoundInterest/package.json
+++ b/CompoundInterest/package.json
@@ -17,7 +17,8 @@
     "react": "18.2.0",
     "react-collapsible": "^2.10.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.8.0"
+    "react-icons": "^4.8.0",
+    "sass": "^1.59.3"
   },
   "devDependencies": {
     "@types/node": "18.14.6",
