--- a/CompoundInterest/tsconfig.json
+++ b/CompoundInterest/tsconfig.json
@@ -19,6 +19,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/pages/index.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/pages/index.js", "src/pages/_document.js", "src/pages/_app.js"],, , "src/pages/index.js", "src/pages/_document.js""src/pages/_app.js"
   "exclude": ["node_modules"]
 }
